@startuml

title __WIDGET's Class Diagram__\n

  namespace net.micode.notes {
    namespace widget {
      abstract class net.micode.notes.widget.NoteWidgetProvider {
          {static} + COLUMN_BG_COLOR_ID : int
          {static} + COLUMN_ID : int
          {static} + COLUMN_SNIPPET : int
          {static} + PROJECTION : String[]
          {static} - TAG : String
          + onDeleted()
          {abstract} # getBgResourceId()
          {abstract} # getLayoutId()
          {abstract} # getWidgetType()
          # update()
          - getNoteWidgetInfo()
          - update()
      }
    }
  }
  

  namespace net.micode.notes {
    namespace widget {
      class net.micode.notes.widget.NoteWidgetProvider_2x {
          + onUpdate()
          # getBgResourceId()
          # getLayoutId()
          # getWidgetType()
      }
    }
  }
  

  namespace net.micode.notes {
    namespace widget {
      class net.micode.notes.widget.NoteWidgetProvider_4x {
          + onUpdate()
          # getBgResourceId()
          # getLayoutId()
          # getWidgetType()
      }
    }
  }
  

  net.micode.notes.widget.NoteWidgetProvider -up-|> android.appwidget.AppWidgetProvider
  net.micode.notes.widget.NoteWidgetProvider_2x -up-|> net.micode.notes.widget.NoteWidgetProvider
  net.micode.notes.widget.NoteWidgetProvider_4x -up-|> net.micode.notes.widget.NoteWidgetProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
